# ethaddrgen

./: Cargo.toml  README.md
src/: color_value.rs  main.rs
src/patterns/: mod.rs  regex.rs
