[package]
name = "ethaddrgen"
version = "1.0.7"
authors = ["Jakub Hlusička <limeth@protonmail.com>"]
description = "Custom Ethereum address generator"
keywords = ["ethereum", "cryptocurrency", "cracking", "hashing", "bruteforce"]
readme = "README.md"
license = "GPL-3.0"
repository = "https://github.com/Limeth/ethaddrgen/"

[dependencies]
rayon = "1.0"
rand = "0.8"
regex = "1.7"
secp256k1 = { version = "0.24", features = ["rand-std"] }
sha3 = "0.10"
parking_lot = "0.12"
num_cpus = "1.14.0"
termcolor = "1.1"
clap = { version = "4.0", features = ["derive"] }
once_cell = "1.16"
generic-array = "0.14"
typenum = "1.15.0"

[profile.release]
lto = "fat"
panic = "abort"